--- a/CalcoloRischioResiduo/CalcoloRischioResiduo.csproj
+++ b/CalcoloRischioResiduo/CalcoloRischioResiduo.csproj
@@ -41,12 +41,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Element.cs" />
-    <Compile Include="FunctionalPerimeterAnalysisCoverage.cs" />
-    <Compile Include="FunctionalPerimeterCoverageStatus.cs" />
-    <Compile Include="FunctionalPerimeters.cs" />
-    <Compile Include="FunctionalPerimeterAnalysis.cs" />
+    <Compile Include="FunctionalPerimeters\PerimetersAnalysis.cs" />
+    <Compile Include="FunctionalPerimeters\AnalysisStatus.cs" />
+    <Compile Include="FunctionalPerimeters\Types.cs" />
+    <Compile Include="FunctionalPerimeters\Perimeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RiskAssessment\SlimPDS.cs" />
+    <Compile Include="RiskAssessment\SlimVCI.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
