--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -80,8 +80,11 @@
   <ItemGroup>
     <Compile Include="ElementUnitTests.cs" />
     <Compile Include="FakeUnitTest.cs" />
-    <Compile Include="FunctionalPerimeterAnalysisCoverageUnitTests.cs" />
+    <Compile Include="FunctionalPerimeters\PerimetersAnalysisUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResidualRiskEstimates\ElementsBuilder.cs" />
+    <Compile Include="ResidualRiskEstimates\Scenarios.cs" />
+    <Compile Include="ResidualRiskEstimates\ResidualRiskEstimatesUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -92,6 +95,7 @@
       <Name>CalcoloRischioResiduo</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
