--- a/CalcoloRischioResiduo/CalcoloRischioResiduo.csproj
+++ b/CalcoloRischioResiduo/CalcoloRischioResiduo.csproj
@@ -40,23 +40,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RiskAssessment\Elements\AbsentElement.cs" />
-    <Compile Include="RiskAssessment\Elements\CompleteElement.cs" />
+    <Compile Include="RiskAssessment\Elements\AbsentAbstractElement.cs" />
+    <Compile Include="RiskAssessment\Elements\CompleteAbstractElement.cs" />
     <Compile Include="RiskAssessment\Elements\IElement.cs" />
-    <Compile Include="RiskAssessment\Elements\Element.cs" />
+    <Compile Include="RiskAssessment\Elements\AbstractElement.cs" />
     <Compile Include="FunctionalPerimeters\PerimetersAnalysis.cs" />
     <Compile Include="FunctionalPerimeters\AnalysisStatus.cs" />
     <Compile Include="FunctionalPerimeters\Types.cs" />
     <Compile Include="FunctionalPerimeters\Perimeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RiskAssessment\Elements\IncompleteElement.cs" />
-    <Compile Include="RiskAssessment\Elements\NotClassifiedElement.cs" />
+    <Compile Include="RiskAssessment\Elements\IncompleteAbstractElement.cs" />
+    <Compile Include="RiskAssessment\Elements\NotClassifiedAbstractElement.cs" />
     <Compile Include="RiskAssessment\Analysis\SlimPDS.cs" />
     <Compile Include="RiskAssessment\Analysis\SlimVCI.cs" />
+    <Compile Include="RiskAssessment\Exceptions\DuplicatedKeyException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\InvalidCorrectionValueException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\InvalidProbabilityValueException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\MissingRequirementsException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\OutOfRangeIndexException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\WrongWeightValueException.cs" />
+    <Compile Include="RiskAssessment\Requirements\BIAValues.cs" />
+    <Compile Include="RiskAssessment\Requirements\COMPLIANCEValues.cs" />
+    <Compile Include="RiskAssessment\Requirements\ExtendedRequirement.cs" />
+    <Compile Include="RiskAssessment\Requirements\ExtentedRequirements.cs" />
+    <Compile Include="RiskAssessment\Requirements\AbstractSlimRequirement.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="RiskAssessment\Requirements\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
