--- a/CalcoloRischioResiduo/CalcoloRischioResiduo.csproj
+++ b/CalcoloRischioResiduo/CalcoloRischioResiduo.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RiskAssessment\Common\Tuple.cs" />
     <Compile Include="RiskAssessment\Elements\AbsentAbstractElement.cs" />
     <Compile Include="RiskAssessment\Elements\CompleteAbstractElement.cs" />
     <Compile Include="RiskAssessment\Elements\IElement.cs" />
@@ -54,16 +55,23 @@
     <Compile Include="RiskAssessment\Analysis\SlimPDS.cs" />
     <Compile Include="RiskAssessment\Analysis\SlimVCI.cs" />
     <Compile Include="RiskAssessment\Exceptions\DuplicatedKeyException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\InvalidCorrectionFactorValueException.cs" />
     <Compile Include="RiskAssessment\Exceptions\InvalidCorrectionValueException.cs" />
     <Compile Include="RiskAssessment\Exceptions\InvalidProbabilityValueException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\InvalidWeightValueException.cs" />
     <Compile Include="RiskAssessment\Exceptions\MissingRequirementsException.cs" />
+    <Compile Include="RiskAssessment\Exceptions\InvalidKeyException.cs" />
     <Compile Include="RiskAssessment\Exceptions\OutOfRangeIndexException.cs" />
     <Compile Include="RiskAssessment\Exceptions\WrongWeightValueException.cs" />
     <Compile Include="RiskAssessment\Requirements\BIAValues.cs" />
     <Compile Include="RiskAssessment\Requirements\COMPLIANCEValues.cs" />
+    <Compile Include="RiskAssessment\Common\CorrectionFactor.cs" />
     <Compile Include="RiskAssessment\Requirements\ExtendedRequirement.cs" />
     <Compile Include="RiskAssessment\Requirements\ExtentedRequirements.cs" />
     <Compile Include="RiskAssessment\Requirements\AbstractSlimRequirement.cs" />
+    <Compile Include="RiskAssessment\Common\FractionWeight.cs" />
+    <Compile Include="RiskAssessment\Requirements\Requirement.cs" />
+    <Compile Include="RiskAssessment\Common\Weight.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
