--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -78,11 +78,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Common\TubleUnitTests.cs" />
     <Compile Include="FakeUnitTest.cs" />
     <Compile Include="FunctionalPerimeters\PerimetersAnalysisUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requirements\ExtendedRequirementUnitTests.cs" />
     <Compile Include="Requirements\ExtendedRequirementsUnitTests.cs" />
+    <Compile Include="Common\WeightUnitTests.cs" />
+    <Compile Include="Requirements\_AbstractSlimRequirementUnitTests.cs" />
     <Compile Include="ResidualRiskEstimates\ElementsBuilder.cs" />
     <Compile Include="ResidualRiskEstimates\Scenarios.cs" />
     <Compile Include="ResidualRiskEstimates\ResidualRiskEstimatesUnitTests.cs" />
