--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -79,7 +79,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Common\TubleUnitTests.cs" />
-    <Compile Include="FakeUnitTest.cs" />
+    <Compile Include="Common\FakeUnitTest.cs" />
     <Compile Include="FunctionalPerimeters\PerimetersAnalysisUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requirements\ExtendedRequirementUnitTests.cs" />
