--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -80,19 +80,21 @@
   <ItemGroup>
     <Compile Include="Common\TubleUnitTests.cs" />
     <Compile Include="Common\FakeUnitTest.cs" />
+    <Compile Include="Elements\CompleteElements\AbstractCase.cs" />
+    <Compile Include="Elements\CompleteElements\CaseLowManagedRisk.cs" />
     <Compile Include="Elements\CompleteElements\CompleteElementsUnitTests.cs" />
-    <Compile Include="Elements\CompleteElements\IScenarioBuilder.cs" />
-    <Compile Include="Elements\CompleteElements\ScenarioOne.cs" />
-    <Compile Include="Elements\CompleteElements\CompleteScenarioTypes.cs" />
-    <Compile Include="Elements\CompleteElements\ScenarioCompleteElementsBuilder.cs" />
-    <Compile Include="Elements\CompleteElements\ScenarioTwo.cs" />
+    <Compile Include="Elements\CompleteElements\IBuilder.cs" />
+    <Compile Include="Elements\CompleteElements\CaseCompletePerimeterAnalysis.cs" />
+    <Compile Include="Elements\CompleteElements\TestCase.cs" />
+    <Compile Include="Elements\CompleteElements\CompleteElementBuilder.cs" />
+    <Compile Include="Elements\CompleteElements\CaseMissingPerimeterAnalysis.cs" />
     <Compile Include="FunctionalPerimeters\PerimetersAnalysisUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\WeightUnitTests.cs" />
     <Compile Include="Requirements\RequirementsSetUnitTests.cs" />
     <Compile Include="Requirements\RequirementUnitTests.cs" />
-    <Compile Include="Elements\ScenarioElementsBuilder.cs" />
-    <Compile Include="Elements\ScenariosType.cs" />
+    <Compile Include="Elements\ElementBuilder.cs" />
+    <Compile Include="Elements\TestCase.cs" />
     <Compile Include="Elements\ElementUnitTests.cs" />
     <Compile Include="Analysis\RPpdsUnitTests.cs" />
   </ItemGroup>
