--- a/WhatIfAnalysis.UnitTests/WhatIfAnalysis.UnitTests.csproj
+++ b/WhatIfAnalysis.UnitTests/WhatIfAnalysis.UnitTests.csproj
@@ -81,7 +81,7 @@
     <Compile Include="CoverageAnalysis\WhatIfEngineUnitTests.cs" />
     <Compile Include="Elements\ElementsSetUnitTests.cs" />
     <Compile Include="Elements\ElementUnitTests.cs" />
-    <Compile Include="FakeTest.cs" />
+    <Compile Include="FakeUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
