--- a/WhatIfAnalysis/WhatIfAnalysis.csproj
+++ b/WhatIfAnalysis/WhatIfAnalysis.csproj
@@ -40,14 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoverageAnalysis\ActivityType.cs" />
-    <Compile Include="CoverageAnalysis\CoverageActivity.cs" />
+    <Compile Include="CoverageAnalysis\ActionType.cs" />
+    <Compile Include="CoverageAnalysis\CoverageAction.cs" />
     <Compile Include="CoverageAnalysis\WhatIfEngine.cs" />
     <Compile Include="Elements\Element.cs" />
     <Compile Include="Elements\ElementsSet.cs" />
     <Compile Include="Elements\ElementType.cs" />
     <Compile Include="Elements\VCIClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReductionAnalysis\ReductionAction.cs" />
+    <Compile Include="ReductionAnalysis\WhatIfEngine.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
